# eth-bounty-agent

./: .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  requirements.txt
configs/: .env.example  agent_config.yaml
data/bugs/: README.md  bugs_ethereum.json
data/contracts/: README.md
data/reports/: README.md
docs/: 00-overview.md  01-bug-bounty-platforms.md  02-security-tools.md  03-learning-resources.md  04-project-proposal.md  05-ai-agent-research.md  06-gohan-insights-research.md  07-TODO.md  07-development-todo.md  08-development-log.md
src/: __init__.py
src/agents/: __init__.py
src/knowledge/: __init__.py
src/tools/: __init__.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py  test_placeholder.py
