[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-bounty-agent"
version = "0.1.0"
description = "AI agent for autonomous discovery of vulnerabilities in Ethereum smart contracts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "TBD"}
authors = [
    {name = "eth-bounty-agent contributors"}
]
keywords = ["ethereum", "security", "ai-agent", "bug-bounty", "smart-contracts"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "web3>=6.0.0",
    "eth-abi>=4.0.0",
    "eth-utils>=2.0.0",
    "py-solc-x>=2.0.0",
    "slither-analyzer>=0.10.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/gtakairo/eth-bounty-agent"
Repository = "https://github.com/gtakairo/eth-bounty-agent"
Documentation = "https://github.com/gtakairo/eth-bounty-agent/blob/main/CLAUDE.md"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
